$Id$

****************************** DRUPAL 6 - 2.x BRANCH ********************************

July 11, 2010
-------------
#768348 by Michelle: Fixed node comment incompatability with new link alter.

July 9, 2010
------------
#571114 by Michelle: Added ability to disable the breadcrumb setting by AF to avoid incompatibility with custom breadcrumbs.
#848964 by vladgur: Fixed 'My posts' view which wasn't showing replies to a topic started by another user.

July 8, 2010
------------
#768348 by Michelle: Moved node/comment link handling to hook_link and hook_link_alter.
#547824 by Michelle: When deleting a node from the node links, it now goes back to the front page like in core.
#757804 by G-son, Michelle: Added back in code for 'new' markers on replies when using core comments that was accidentially removed when making it compatable with node comments.
#831364 by Michelle, smerrill: Removed & from form_state paramater in form_alter to make php 5.3 happy.
#559536 by Michelle: Fixed notices.
#751890 by Michelle: Removed legacy code that was replaced by Views.
#736802 by Michelle: Organized code.

July 5, 2010 - ALPHA 3
------------
#821744 by Michelle: Updated Author Pane integration to work with beta 1.
#830102 by merlinofchaos: Added setting for 'Inject hierarchy of first term into breadcrumb trail' to forum page.
#832286 by Scyther: Allow users to see a signature in an input format they don't have access to.

May 27, 2010
------------
#787454 by berdir, mikey_p, merlinofchaos, and Michelle: Fixed error in SQL that caused new posts to be counted twice if revisions were on when the node was moved to another forum.
#801260 by dereine: advanced_forum_statistics_replies performance improved.

May 24, 2010
------------
#807742 by Michelle: Started work on documenting the templates.

May 11, 2010
------------
#793020 by Michelle: Fixed issue with no-style-name template file not being found.
#793664 by crea: Fixed Author Pane not showing on nodecomment reply preview.